--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flamingo-coin",
-  "homepage": "https://flamingocoincode.github.io/flamingo-coin-website/",
+  "homepage": "https://flamingocoin.org",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
